--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: microsoft/setup-msbuild@master
-      - run: "msbuild VGMPlay\VGMPlay.sln /p:Platform=Win32;Configuration=Release"
+      - run: "msbuild VGMPlay\\VGMPlay.sln /p:Platform=Win32;Configuration=Release"
         shell: cmd # forced to do so
