--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: seanmiddleditch/gha-setup-vsdevenv@v1
       - uses: microsoft/setup-msbuild@master
       - run: |
-          for /f "delims=" %%d in ('dir /s /b %VSINSTALLDIR%\vcvarsall.bat"') do @set myVCVARSALL=%%d
+          for /f "delims=" %%d in ('dir /s /b "%VSINSTALLDIR%\vcvarsall.bat"') do @set myVCVARSALL=%%d
           if not defined myVCVARSALL exit 1
           call %myVCVARSALL%
           msbuild VGMPlay\\VGMPlay.sln /p:Platform=Win32;Configuration=Release;PlatformToolset=v142
