--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -12,8 +12,8 @@ jobs:
       - run: |
           for /f "delims=" %%d in ('dir /s /b "%VSINSTALLDIR%\vcvarsall.bat"') do @set myVCVARSALL=%%d
           if not defined myVCVARSALL exit 255
-          call "%myVCVARSALL%"
-          msbuild VGMPlay\\VGMPlay.sln /p:Platform=Win32;Configuration=Release;PlatformToolset=v142
+          call "%myVCVARSALL%" amd64 10.0.18362.0
+          msbuild VGMPlay\\VGMPlay.sln /p:Platform=x64;Configuration=Release;PlatformToolset=v142
         shell: cmd # forced to do so
       - uses: actions/upload-artifact@v2
         with:
@@ -21,9 +21,9 @@ jobs:
           name: VGMPlay-CLI-win32-msvc
           # A file, directory or wildcard pattern that describes what to upload
           path: |
-              Release/*.pdb
-              Release/*.exe
-              Release/*.dll
-              Release/*.ini
-              Release/*.txt
+              VGMPlay/Release_x64/*.pdb
+              VGMPlay/Release_x64/*.exe
+              VGMPlay/Release_x64/*.dll
+              VGMPlay/Release_x64/*.ini
+              VGMPlay/Release_x64/*.txt
               !Release/vc142.pdb
