--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -7,23 +7,29 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: seanmiddleditch/gha-setup-vsdevenv@v1
-      - uses: microsoft/setup-msbuild@master
       - run: |
-          for /f "delims=" %%d in ('dir /s /b "%VSINSTALLDIR%\vcvarsall.bat"') do @set myVCVARSALL=%%d
-          if not defined myVCVARSALL exit 255
-          call "%myVCVARSALL%" amd64 10.0.18362.0
-          msbuild VGMPlay\\VGMPlay.sln /p:Platform=x64;Configuration=Release;PlatformToolset=v142
-        shell: cmd # forced to do so
-      - uses: actions/upload-artifact@v2
-        with:
-          # Artifact name
-          name: VGMPlay-CLI-win32-msvc
-          # A file, directory or wildcard pattern that describes what to upload
-          path: |
-              VGMPlay/Release_x64/*.pdb
-              VGMPlay/Release_x64/*.exe
-              VGMPlay/Release_x64/*.dll
-              VGMPlay/Release_x64/*.ini
-              VGMPlay/Release_x64/*.txt
-              !Release/vc142.pdb
+          cd VGMPlay
+          make WINDOWS=1
+#   runs-on: windows-latest
+#   steps:
+#     - uses: actions/checkout@v2
+#     - uses: seanmiddleditch/gha-setup-vsdevenv@v1
+#     - uses: microsoft/setup-msbuild@master
+#     - run: |
+#         for /f "delims=" %%d in ('dir /s /b "%VSINSTALLDIR%\vcvarsall.bat"') do @set myVCVARSALL=%%d
+#         if not defined myVCVARSALL exit 255
+#         call "%myVCVARSALL%" amd64 10.0.18362.0
+#         msbuild VGMPlay\\VGMPlay.sln /p:Platform=x64;Configuration=Release;PlatformToolset=v142
+#       shell: cmd # forced to do so
+#     - uses: actions/upload-artifact@v2
+#       with:
+#         # Artifact name
+#         name: VGMPlay-CLI-win32-msvc
+#         # A file, directory or wildcard pattern that describes what to upload
+#         path: |
+#             VGMPlay/Release_x64/*.pdb
+#             VGMPlay/Release_x64/*.exe
+#             VGMPlay/Release_x64/*.dll
+#             VGMPlay/Release_x64/*.ini
+#             VGMPlay/Release_x64/*.txt
+#             !Release/vc142.pdb
