--- a/.github/workflows/mwbuild.yml
+++ b/.github/workflows/mwbuild.yml
@@ -31,3 +31,4 @@ jobs:
               VGMPlay/*.dll
               VGMPlay/*.ini
               VGMPlay/*.txt
+              !VGMPlay/vgmspec171.txt
